# ComfyUI-Shinsplat

./: README.md  Tensor_Toys.txt  __init__.py  changes.txt  clip_text_encode.py  clip_text_encode_ALT.py  clip_text_encode_T5.py  clip_text_encode_flux.py  clip_text_encode_sdxl.py  clip_tokens_encode.py  functions.py  green_box.py  hex_to_other.py  ksampler.py  lora_loader.py  nupoma.py  pyproject.toml  python.py  python_more.py  seed.py  shinsplat_clip_text_encode.py  shinsplat_clip_text_encode_SD3.py  shinsplat_clip_text_encode_T5.py  shinsplat_clip_text_encode_sdxl.py  shinsplat_clip_tokens_encode.py  shinsplat_functions.py  shinsplat_green_box.py  shinsplat_lora_loader.py  shinsplat_python.py  shinsplat_python_more.py  shinsplat_sum_wrap.py  shinsplat_tensor_toys.py  shinsplat_test_node.py  shinsplat_text_to_tokens.py  shinsplat_text_to_tokens_SD3.py  shinsplat_variables.py  string_interpolated.py  sum_wrap.py  t5_tokenizer.json  tensor_toys.py  (+4 more)
tensor_toys/: deets_SD.json  deets_SD3.json
web/: tensor_toys.js
work-flows/: SD-workflow.json  SD3-workflow.json  XL-workflow.json
