[project]
name = "comfyui-shinsplat"
description = "Data manipulation and retrieval nodes.  Custom CLIP Text Encode with additional input and output convenience ports.  Sum Wrap, a simple integer roll-over iterator.  Custom LoRA Loader to extract and view meta-data and trigger phrases.  Green Box is a node that can be chained to inject prompt fragments, iterating through a list.  Python is a node that allows complete control, manipulation and creation of data, write your Python code inside this node.  Multiple input/output ports referenced by name."
version = "1.0.3"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Shinsplat/ComfyUI-Shinsplat"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinsplat"
DisplayName = "Shinsplat"
Icon = ""
